--- a/WCSTrainer/Pages/Components/People.razor
+++ b/WCSTrainer/Pages/Components/People.razor
@@ -61,6 +61,7 @@
         <p class="training">Order #197 -+- 6/22/2024 - 7/13/2024</p>
         <p class="training">Order #233 -+- 8/2/2024 - 12/1/2024</p>
     </div>
+    <a class="btn btnBlue bg-btn">Add Trainer</a>
 </div>
 
 @code {
