--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -7,7 +7,6 @@
 
 @using WCSTrainer.Pages.Components
 
-
 <div id="people-component" class="people-component hidden">
     <component type="typeof(People)" render-mode="WebAssemblyPrerendered" param-Employees="@Model.Employees" param-addTrainees="false" />
 </div>
@@ -185,13 +184,9 @@
 
     person.forEach(item => {
         item.addEventListener("click", event => {
-            test(event);
+            addTrainer(event);
         });
     });
-
-    function test(event) {
-        event.target.style.display = "none";
-    }
 
     function addTrainer(event) {
         var name = event.target.value
@@ -218,9 +213,6 @@
         }
     }
 
-    trainList.addEventListener("DOMNodeInserted", toggleSubmitButton);
-    trainList.addEventListener("DOMNodeRemoved", toggleSubmitButton);
-
     function validateForm(event) {
         if (trainList.getElementsByTagName("li").length === 0) {
             event.preventDefault();
@@ -228,8 +220,9 @@
         }
     }
 
+    trainList.addEventListener("DOMNodeInserted", toggleSubmitButton);
+    trainList.addEventListener("DOMNodeRemoved", toggleSubmitButton);
     document.querySelector('form').addEventListener("submit", validateForm);
-
 </script>
 
 @section Scripts {
