--- a/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
@@ -11,40 +11,49 @@
         <div class="properties">
             <div class="scheduling">
                 <div class="schedule">
-                    @for (int month = 1; month <= 12; month++) {
-                        DateTime date = new DateTime(Model.selectedYear, month, 1);
-                        string monthName = date.ToString("MMMM");
-                        string type = "month-inactive";
+                    <div class="months" id="months">
+                        @for (int month = 1; month <= 12; month++) {
+                            DateTime date = new DateTime(Model.selectedYear, month, 1);
+                            string monthName = date.ToString("MMMM");
+                            string type = "month-inactive";
 
-                        if (DateTime.Now.Month == month && DateTime.Now.Year == Model.selectedYear) {
-                            type = "month-active";
+                            if (DateTime.Now.Month == month && DateTime.Now.Year == Model.selectedYear) {
+                                type = "month-active";
+                            }
+
+                            <div class="month @type">
+                                <div class="title">
+                                    <p>@monthName</p>
+                                </div>
+                                <div class="info">
+                                    <p>Preview:</p>
+                                    @if (Model.getFirstTrainingOrder(month, 0) != null) {
+                                        var order = @Model.getFirstTrainingOrder(month, 0);
+                                        <div class="order live">Order #@order.Id - @order.beginDate</div>
+                                    } else {
+                                        <div class="order gray"></div>
+                                    }
+                                    @if (Model.getFirstTrainingOrder(month, 1) != null) {
+                                        var order = @Model.getFirstTrainingOrder(month, 1);
+                                        <div class="order live">Order #@order.Id - @order.beginDate</div>
+                                    } else {
+                                        <div class="order gray"></div>
+                                    }
+                                </div>
+                                <div class="stats">
+                                    <p>Total Hours: @Model.countOrderHours(month)</p>
+                                    <p>Training Orders: @Model.countMonthOrders(month)</p>
+                                </div>
+                            </div>
                         }
-
-                        <div class="month @type">
-                            <div class="title">
-                                <p>@monthName</p>
-                            </div>
-                            <div class="info">
-                                <p>Preview:</p>
-                                @if (Model.getFirstTrainingOrder(month, 0) != null) {
-                                    var order = @Model.getFirstTrainingOrder(month, 0);
-                                    <div class="order live">Order #@order.Id - @order.beginDate</div>
-                                } else {
-                                    <div class="order gray"></div>
-                                }
-                                @if (Model.getFirstTrainingOrder(month, 1) != null) {
-                                    var order = @Model.getFirstTrainingOrder(month, 1);
-                                    <div class="order live">Order #@order.Id - @order.beginDate</div>
-                                } else {
-                                    <div class="order gray"></div>
-                                }
-                            </div>
-                            <div class="stats">
-                                <p>Total Hours: @Model.countOrderHours(month)</p>
-                                <p>Training Orders: @Model.countMonthOrders(month)</p>
-                            </div>
-                        </div>
-                    }
+                    </div>
+                    
+                    <div class="days" id="days" style="display: none;">
+                        @for (int day = 0; day < 30; day++) {
+                            <div class="day">@day</div>
+                        }
+                    </div>
+                    
                 </div>
             </div>
             <div class="tool-container">
@@ -91,3 +100,23 @@
         </div>
     </div>
 </div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var monthElements = document.getElementsByClassName("month");
+        var months = document.getElementById("months");
+        var days = document.getElementById("days");
+
+        Array.prototype.slice.call(monthElements).forEach(item => {
+            item.addEventListener("click", event => {
+                clickMonth(event);
+            });
+        });
+
+        function clickMonth(event) {
+            months.style.display = "none";
+            days.style.display = "flex";
+        }
+    });
+
+</script>
