--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -113,7 +113,7 @@
                     </div>
                     <div class="text-group">
                         <div class="identifier">
-                            <p class="title">Session Duration</p>
+                            <p class="title">Training Hours Needed</p>
                         </div>
                         <div class="info-content">
                             <p class="info">@Html.DisplayFor(model => model.TrainingOrder.duration) Hours</p>
