--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -116,7 +116,7 @@
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Duration</p>
+                                    <p class="control-label">Training Hours Needed</p>
                                     <span asp-validation-for="TrainingOrder.duration" class="text-danger"></span>
                                 </div>
                                 <input asp-for="TrainingOrder.duration" class="form-control" />
