--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -83,7 +83,14 @@
                                 </div>
                                 <textarea rows="5" /></textarea>
                             </div>
-
+                        </div>
+                        <div class="form-group">
+                            <div class="form">
+                                <div class="labels">
+                                    <p class="control-label">Signature</p>
+                                </div>
+                                <input class="form-control" />
+                            </div>
                         </div>
                         <div class="form-group">
                             <div class="btn-container">
