--- a/WCSTrainer/Pages/Components/People.razor
+++ b/WCSTrainer/Pages/Components/People.razor
@@ -56,12 +56,31 @@
         <p class="one">Assigned Trainings:</p>
     </div>
     <div class="trainings">
-        <p class="training">Order #183 -+- 3/12/2024 - 4/2/2024</p>
-        <p class="training">Order #162 -+- 4/8/2024 - 5/9/2024</p>
-        <p class="training">Order #197 -+- 6/22/2024 - 7/13/2024</p>
-        <p class="training">Order #233 -+- 8/2/2024 - 12/1/2024</p>
+        <p class="training">Order #183 -+- 22 Hours</p>
+        <p class="training">Order #162 -+- 36 Hours</p>
+        <p class="training">Order #197 -+- 11 Hours</p>
+        <p class="training">Order #233 -+- 24 Hours</p>
     </div>
     <a class="btn btnBlue bg-btn">Add Trainer</a>
+
+    <PageTitle>Control Render</PageTitle>
+
+    <h1>Control Render Example</h1>
+
+    <label>
+        <input type="checkbox" @bind="shouldRender" />
+        Should Render?
+    </label>
+
+    <p>Current count: @currentCount</p>
+
+    <p>
+        <button @onclick="IncrementCount">Click me</button>
+    </p>
+    <p>Current count: @currentCount</p>
+    <p>
+        <button @onclick="IncrementCount">Click me</button>
+    </p>
 </div>
 
 @code {
@@ -71,4 +90,15 @@
     public bool addTrainees { get; set; }
     [Parameter]
     public IList<Employee> Employees { get; set; }
+
+    private int currentCount = 0;
+    private bool shouldRender = true;
+
+    protected override bool ShouldRender() {
+        return shouldRender;
+    }
+
+    private void IncrementCount() {
+        currentCount++;
+    }
 }
